<resources>
    <string name="app_name">TucsonTL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tucson TL</string>
    <string name="nav_header_subtitle">руководство по ремонту и эксплуатации</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_introduction">Введение</string>
    <string name="menu_chapter1">1. Действия в чрезвычайных ситуациях</string>
    <string name="menu_chapter2a">2A. Ежедневные проверки и определение неисправностей</string>
    <string name="menu_chapter2b">2B. Эксплуатация автомобиля в зимний период</string>
    <string name="menu_chapter2c">2C. Поездка на СТО</string>
    <string name="menu_chapter3">3. Инструкция по эксплуатации и обслуживанию</string>
    <string name="menu_chapter4">4. Предостережения и правила техники безопасности при выполнении работ на автомобиле</string>
    <string name="menu_chapter5">5. Основные интрументы, измерительные приборы и методы работы с ними</string>
    <string name="menu_chapter6a">6A. Бензиновые двигатели 1.6 л</string>
    <string name="menu_chapter6b">6B. Бензиновый двигатель 2.0 л</string>
    <string name="menu_chapter6c">6C. Дизельный двигатель 2.0 л</string>
    <string name="menu_chapter7">7. Система питания и управления двигателем</string>
    <string name="menu_chapter8">8. Система смазки</string>
    <string name="menu_chapter9">9. Система охлаждения</string>
    <string name="menu_chapter10">10. Система впуска и выпуска</string>
    <string name="menu_chapter11a">11A. Сцепление</string>
    <string name="menu_chapter11b">11B. Механическая трансмиссия</string>
    <string name="menu_chapter11c">11C. Автоматическая трансмиссия</string>
    <string name="menu_chapter11d">11D. Раздаточная коробка и задняя главная передача</string>
    <string name="menu_chapter12">12. Приводные валы</string>
    <string name="menu_chapter13">13. Ходовая часть</string>
    <string name="menu_chapter14">14. Тормозная система</string>
    <string name="menu_chapter15">15. Рулевое управление</string>
    <string name="menu_chapter16">16. Кузов</string>
    <string name="menu_chapter17">17. Система отопления, вентиляции и кондиционирования</string>
    <string name="menu_chapter18">18. Пассивная безопасность</string>
    <string name="menu_chapter19a">19A. Электрооборудование двигателя</string>
    <string name="menu_chapter19b">19B. Электрооборудование и электросистемы автомобиля</string>
    <string name="menu_chapter20">20. Электросхемы</string>
    <string name="text_introducion">НАЗНАЧЕНИЕ РУКОВОДСТВА ПО РЕМОНТУ И ЭКСПЛУАТАЦИИ
        Собранная в данном Руководстве информация позволит владельцу автомобиля определиться с тем, когда и какие виды работ по обслуживанию и ремонту транспортного средства должны производиться. Следует понимать, что данная книга не сделает автомехаником человека, не сталкивающегося ранее с устройством автомобиля. Однако описание тех или иных ремонтных операций позволит трезво оценить свои возможности и, вероятно, некоторые из неисправностей устранить самостоятельно. В случае если выполнение ремонта своими силами окажется затруднительным, читатель данного Руководства все же будет иметь представление об объеме необходимых работ, что защитит его от возможного обмана и лишних затрат. Автомеханику книга даст возможность выполнить ремонт быстро и без осложнений.
    ИСПОЛЬЗОВАНИЕ РУКОВОДСТВА
    Руководство разбито на главы, несущие информацию по устройству различных систем автомобиля. Каждая глава имеет собственное содержание, позволяющее быстро найти раздел с необходимыми данными. Текст разделов сопровождается иллюстрациями, дополняющими предоставляемый материал.
Читателю, знакомому с устройством автомобиля, не составит труда найти интересующую его информацию. Для автолюбителей, которые ранее не были знакомы с процессом поиска неисправностей, но столкнувшимися с теми или иными трудностями во время пуска двигателя или при вождении автомобиля, предлагается глава «Ежедневные проверки и определение неисправностей», позволяющая выявить причину проблемы по тем или иным признакам. Если устранение не составляет особой сложности – тут же приводится способ решения. Если неисправность более серьезна – дается ссылка на главу, в которой можно найти описание устранения причин поломки. Разумеется, приведенные алгоритмы поиска неисправностей подразумевают только такие методы диагностики, которые могут быть выполнены владельцем автомобиля самостоятельно, без применения специального оборудования. Более сложная
диагностика должна производиться на специализированных станциях квалифицированным персоналом.</string>
    <string name="test_text">Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.
                             Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.
                             Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.
                             Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.
    </string>
    <string name="test_text1">rererererrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrАварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.
                             Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.
                             Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.
                             Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.
    </string>
    <string name="test1_text">Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.
                             Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.
                             Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.
                             Аварийная световая сигнализация предупреждает других водителей о необходимости повышенного внимания при приближении, обгоне и проезде мимо автомобиля. Ее нужно использовать при любых аварийных работах или остановках на обочине. Нажать выключатель световой сигнализации можно при любом положении ключа зажигания. Выключатель световой сигнализации находится на центральной консоли панели выключателей. Все указатели поворота включатся одновременно.
    </string>
</resources>