<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_introduction"
            android:title="@string/menu_introduction" />
        <item
            android:id="@+id/id_chapter1"
            android:title="@string/menu_chapter1" />
        <item
            android:id="@+id/id_chapter2a"
            android:title="@string/menu_chapter2a" />
        <item
            android:id="@+id/id_chapter2b"
            android:title="@string/menu_chapter2b" />
        <item
            android:id="@+id/id_chapter2c"
            android:title="@string/menu_chapter2c" />
        <item
            android:id="@+id/id_chapter3"
            android:title="@string/menu_chapter3" />
        <item
            android:id="@+id/id_chapter4"
            android:title="@string/menu_chapter4" />
        <item
            android:id="@+id/id_chapter5"
            android:title="@string/menu_chapter5" />
        <item
            android:id="@+id/id_chapter6a"
            android:title="@string/menu_chapter6a" />
        <item
            android:id="@+id/id_chapter6b"
            android:title="@string/menu_chapter6b" />
        <item
            android:id="@+id/id_chapter6c"
            android:title="@string/menu_chapter6c" />
        <item
            android:id="@+id/id_chapter7"
            android:title="@string/menu_chapter7" />
        <item
            android:id="@+id/id_chapter8"
            android:title="@string/menu_chapter8" />
        <item
            android:id="@+id/id_chapter9"
            android:title="@string/menu_chapter9" />
        <item
            android:id="@+id/id_chapter10"
            android:title="@string/menu_chapter10" />
        <item
            android:id="@+id/id_chapter11a"
            android:title="@string/menu_chapter11a" />
        <item
            android:id="@+id/id_chapter11b"
            android:title="@string/menu_chapter11b" />
        <item
            android:id="@+id/id_chapter11c"
            android:title="@string/menu_chapter11c" />
        <item
            android:id="@+id/id_chapter11d"
            android:title="@string/menu_chapter11d" />
        <item
            android:id="@+id/id_chapter12"
            android:title="@string/menu_chapter12" />
        <item
            android:id="@+id/id_chapter13"
            android:title="@string/menu_chapter13" />
        <item
            android:id="@+id/id_chapter14"
            android:title="@string/menu_chapter14" />
        <item
            android:id="@+id/id_chapter15"
            android:title="@string/menu_chapter15" />
        <item
            android:id="@+id/id_chapter16"
            android:title="@string/menu_chapter16" />
        <item
            android:id="@+id/id_chapter17"
            android:title="@string/menu_chapter17" />
        <item
            android:id="@+id/id_chapter18"
            android:title="@string/menu_chapter18" />
        <item
            android:id="@+id/id_chapter19a"
            android:title="@string/menu_chapter19a" />
        <item
            android:id="@+id/id_chapter19b"
            android:title="@string/menu_chapter19b" />
        <item
            android:id="@+id/id_chapter20"
            android:title="@string/menu_chapter20" />
    </group>
</menu>
